# cull

./: .gitignore  AGENTS.md  AUTHORSHIP.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE.md  NOTICE  PRODUCT.md  README.md  SECURITY.md  TEST_SCENARIOS.md  package-lock.json  package.json  release.config.json  tsconfig.json  vite.config.js
.beads/: interactions.jsonl  issues.jsonl
.claude/: CLAUDE.md
.enzyme/: enzyme.db-shm  enzyme.db-wal
.github/: dependabot.yml  pull_request_template.md
.impeccable/: design.json
docs/: 2026-05-10-liveblocks-research.md  2026-05-10-vision-brainstorm-processed.md  2026-05-10-vision-brainstorm-raw.md  2026-05-13-icloud-photos-import-research.md  ASSETS.md  BRAND.md  COMPATIBILITY.md  PRIVACY.md  (+44 more)
src-tauri/: .gitignore  Cargo.toml  Info.plist  deny.toml  tauri.conf.json
src-tauri/.enzyme/: enzyme.db-shm  enzyme.db-wal
src-tauri/.svelte-kit/: ambient.d.ts
src-tauri/capabilities/: app-admin.json  app-ai-processing.json  app-curation.json  app-export-publishing.json  app-file-access.json  app-read.json  app-ui.json  default.json  preview-display.json
src-tauri/dmg/: README.md
src-tauri/help/Cull.help/Contents/: Info.plist
src-tauri/help/Cull.help/Contents/Resources/English.lproj/: Cull.cshelpindex  Cull.helpindex  index.html
src-tauri/help/Cull.help/Contents/Resources/English.lproj/sty/: help.css
src-tauri/icons/: icon.icns
src-tauri/permissions/: app-admin.toml  app-ai-processing.toml  app-curation.toml  app-export-publishing.toml  app-file-access.toml  app-read.toml  app-ui.toml
src-tauri/src/: cli.rs  cloud.rs  config_contract.rs  extensions.rs  lib.rs  logging.rs  main.rs  menu.rs  tray.rs  watcher.rs
src-tauri/src/cli/: context.rs  mod.rs  output.rs
src-tauri/src/cli/tools/: catalog.rs  embeddings.rs  export.rs  import.rs  library.rs  mod.rs  quality.rs
src-tauri/src/commands/: agent_proposals.rs  agent_snapshots.rs  catalog.rs  clipboard_monitor.rs  collections.rs  color.rs  deeplink.rs  detection.rs  diagnostics.rs  dictation.rs  embeddings.rs  exchange.rs  export.rs  files.rs  generation.rs  import.rs  jobs.rs  library.rs  lineage.rs  mcp.rs  media.rs  mod.rs  ocr.rs  perceptual_hash.rs  plugins.rs  preview.rs  privacy.rs  quality.rs  raw.rs  selection.rs  sessions.rs  smart_collections.rs  static_publishing.rs  tags.rs  transform.rs  undo.rs  vision.rs  window.rs
src-tauri/src/core/: db.rs  schema.sql  thumbnails.rs
src-tauri/src/db_core/: activity.rs  agent_proposals.rs  c2pa_reader.rs  canvas_document.rs  color.rs  db.rs  detection.rs  embeddings.rs  gemini.rs  image_decode.rs  import.rs  lineage.rs  mod.rs  models.rs  nl_parser.rs  path_policy.rs  perceptual_hash.rs  quality.rs  remote_embeddings.rs  schema.sql  secrets.rs  sessions.rs  sidecar.rs  smart_collections.rs  source_detection.rs  tags.rs  thumbnails.rs  vision.rs
src-tauri/src/db_core/queries/: analysis_status.rs  catalog.rs  collections.rs  detection.rs  embeddings.rs  images.rs  jobs.rs  media.rs  misc.rs  mod.rs  selections.rs  smart_collections.rs
src-tauri/src/dictation/: macos.rs  mod.rs
src-tauri/src/exchange/: bundle.rs  mod.rs  xmp.rs
src-tauri/src/export/: manifest.rs  mod.rs  patch.rs  pdf.rs  presets.rs  validate.rs
src-tauri/src/mcp/: auth.rs  http.rs  mod.rs  server.rs  socket.rs  tools.rs
src-tauri/src/mcp/tools/: catalog.rs  clipboard.rs  collections.rs  curation.rs  export.rs  library.rs  ml.rs  sessions.rs  system.rs  vision.rs
src-tauri/src/plugins/: install.rs  invoke.rs  loader.rs  manifest.rs  mod.rs  proof.rs  registry.rs
src-tauri/src/preview/: histogram.rs  mod.rs  state.rs  web_stream.rs  window.rs
src-tauri/src/raw/: fuji.rs  libraw.rs  mod.rs
src-tauri/src/services/: agent_proposals.rs  agent_snapshots.rs  ai.rs  asset_events.rs  audit.rs  claude_agent.rs  clipboard_monitor.rs  clipboard_monitor_macos.rs  curation.rs  display.rs  export.rs  generation.rs  import.rs  jobs.rs  library.rs  mod.rs  model_download.rs  model_pipeline.rs  ocr.rs  sessions.rs  tokens.rs  undo.rs  undo_history.rs
src-tauri/tests/: compat_golden.rs  export_compat_golden.rs  histogram.rs  preview_monitor.rs  preview_state.rs  preview_web_stream.rs  preview_window.rs
src-tauri/tests/fixtures/db/: v21.db  v22.db  v23.db  v24.db
src-tauri/tests/fixtures/static-publish/v1/: index.html
src-tauri/tests/fixtures/static-publish/v1/data/: canvas.json
(+484 files in other folders)
