[package]
name = "imageview"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "imageview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-deep-link = "2.4.9"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
ndarray = "0.15"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
base64 = "0.22"
tokio = { version = "1", features = ["time"] }
tauri-plugin-single-instance = "2"

