[package]
name = "cull"
version = "0.1.0"
description = "Local-first desktop image viewer for AI-generated art workflows."
authors = ["Gleb Kalinin <glebis@gmail.com>"]
license = "BUSL-1.1"
repository = "https://github.com/glebis/cull"
homepage = "https://github.com/glebis/cull"
readme = "../README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cull_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp", "tiff", "ico"] }
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-deep-link = "2.4.9"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
ndarray = "0.15"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
base64 = "0.22"
tokio = { version = "1", features = ["time", "net", "io-util", "io-std", "rt", "rt-multi-thread", "macros"] }
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
regex = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
png = "0.17"
printpdf = "0.7"
thiserror = "1"
parking_lot = "0.12"
schemars = "1.2"
rmcp = { version = "1.6", features = ["server", "macros", "transport-streamable-http-server"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "http1"] }
http-body-util = "0.1"
http = "1"
tower-service = "0.3"
bytes = "1"
anyhow = "1"
tokio-util = { version = "0.7", features = ["codec"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
subtle = "2"
hex = "0.4"
dirs = "5"
rsraw = "0.1"
notify = "6"
dashmap = "6"
qrcode = "0.14"
tempfile = "3"
trash = "5"

[dev-dependencies]

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSResponder", "NSSharingService", "NSView", "NSWindow", "NSWorkspace"] }
objc2-foundation = { version = "0.3", features = ["NSArray", "NSError", "NSGeometry", "NSLocale", "NSObject", "NSString", "NSThread", "NSURL", "block2"] }
objc2-speech = "0.3"
objc2-avf-audio = "0.3"
block2 = "0.6"
